# onnxruntime-rs

./: Cargo.toml  LICENSE  README.md  build.rs  default.nix  onnxruntime-rs.nix
.github/actions/: setup-env.sh
.github/scripts/: setup-env.sh
.github/workflows/: cargo-ci.yml  nix-ci.yml  test.yml
cbits/: ort.h
examples/: info.rs  run.rs
nix/: nixpkgs.nix  sources.json
onnxruntime/: Cargo.toml
onnxruntime/src/: lib.rs
src/: allocator.rs  api.rs  custom_op.rs  lib.rs  sys.rs  value.rs
sys/: Cargo.toml  README.md  build.rs
sys/src/: lib.rs
